# opengl

./: .gitignore  CMakeLists.txt  line.cpp
include/glad/: glad.h
src/: Image.cpp  Image.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp
src/shaders/: fragment_shader.fs  vertex_shader.vs
